tests/error/ptr_assign_member.gw
#! [contains] can't assign member function to non member function pointer
typedef void Test();
Test test;
class D {
  fun void test(){}
}

D d;
d.test @=> test;
